--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,5 +9,16 @@
 
   body {
     @apply font-sans antialiased bg-background text-foreground;
+
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+}
+
   }
 }
